AbstractElasticIndex: Use Java 8 StreamSupport instead of FluentIterable
Change-Id: Ie17c30b862fcb3f816ba162dc6de327e7b45e73e